# sauw

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  build_android.sh
.github/workflows/: ci.yml  release-android.yml  release.yml
android/: settings.gradle
android/app/: build.gradle
assets/atlas/: block.json  item.json
assets/recipes/: rope.recipe  stone_axe.recipe  stone_pickaxe.recipe  stone_shovel.recipe
assets/worldgen/: biome.bmap  biome.mapper  layer.lmap
assets/worldgen/biome/: beach.biome  desert.biome  forest.biome  ocean.biome  plains.biome  river.biome
ios/sauw.xcodeproj/: project.pbxproj
platform/android/: .gitignore
platform/android/app/: build.gradle
platform/ios/: build_rust_deps.sh
platform/ios/sauw.xcodeproj/: project.pbxproj
platform/ios/src/: Info.plist
platform/macos/: Info.plist
scripts/: get_ios_device.sh
src/: constants.rs  game_registry.rs  icon.rs  lib.rs  main.rs
src/core/: camera.rs  mod.rs  registry.rs  window_icon.rs
src/engine/: mod.rs
src/engine/player/: resources.rs
src/engine/plugins/: game.rs  startup.rs
src/engine/rendering/: camera.rs
src/engine/resources/: game_registry.rs  mod.rs
src/engine/world/: components.rs  mod.rs  resources.rs  systems.rs  tiles.rs
src/game/: atlas.rs  mod.rs  worldgen.rs
src/game/assets/: atlas.rs  mod.rs  recipe.rs  resource.rs
src/game/commands/: camzoom.rs  craft.rs  damage.rs  debug.rs  drop.rs  heal.rs  inventory.rs  load_radius.rs  mod.rs  safe_zone.rs  time.rs  tp.rs
src/game/crafting/: components.rs  craft.rs  mod.rs
src/game/drop/: components.rs  drop_item.rs  mod.rs  pickup.rs  spawn.rs  spawner.rs
src/game/input/: debug.rs  inventory.rs  mod.rs  player.rs
src/game/item/: item_stack.rs
src/game/player/: components.rs  health.rs  input.rs  inventory.rs  mod.rs  movement.rs  resources.rs  spawn.rs  sprite.rs  systems.rs
src/game/plugins/: commands.rs  game.rs  mod.rs  startup.rs
src/game/registry/: biome_registry.rs  block_registry.rs  item_registry.rs  mod.rs  recipe_registry.rs
src/game/rendering/: camera.rs  mod.rs  y_sort.rs
src/game/resources/: mod.rs  textures.rs
src/game/ui/: joystick.rs  mod.rs  safe_zone.rs  scale.rs
src/game/world/: block.rs  camera.rs  chunk.rs  mod.rs  (+7 more)
src/platform/: safe_zone.rs
src/player/: systems.rs
src/plugins/: game.rs  icon.rs  mod.rs
src/registry/: block_registry.rs  mod.rs
src/shared/: int_or_float.rs  mod.rs
src/world/: block.rs  block_registry.rs  chunk.rs  components.rs  mod.rs  systems.rs  textures.rs  tiles.rs  world.rs
(+16 files in other folders)
