[package]
name = "sauw"
version = "0.1.0"
edition = "2024"

[build-dependencies]
embed-resource = "1.6.3"

[dependencies]
bevy = { version = "0.17.3" }
bevy_asset_loader = "0.24.0"
bevy_console = "0.16.0"
bevy_firefly = "0.17.0"
bevy_rapier2d = "0.32.0"
bevy_winit = "0.17.3"
clap = { version = "4.5.54", features = ["derive"] }
image = "0.25.9"
noise = "0.9.0"
rand = "0.9.2"
winit = "0.30.12"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
